--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
     "svg-sprite-loader": "^6.0.11",
